--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "faker-food"
+name = "faker_food"
 version = "0.1.0"
 description = "Food related provider for the Python Faker library"
 authors = ["Mark Adams <madams74@gmail.com>"]
@@ -11,8 +11,7 @@ packages = [{include = "faker_food"}]
 python = "^3.8"
 Faker = "^12.0.0"
 
-
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pytest = "^7.0.1"
 pytest-cov = "^3.0.0"
 black = "^22.1.0"
@@ -25,5 +24,5 @@ testpaths = [
 ]
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
