--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,9 @@ description = "Food related provider for the Python Faker library"
 authors = ["Mark Adams <madams74@gmail.com>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "faker_food"}]
+packages = [{ include = "faker_food" }]
 repository = "https://github.com/madams74/faker_food"
-url="https://github.com/madams74/faker_food"
+homepage = "https://github.com/madams74/faker_food"
 keywords = ["faker", "data", "test", "mock", "generator", "food"]
 classifiers = [
    "Intended Audience :: Developers",
@@ -21,20 +21,18 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
-Faker = "^12.0.0"
+python = ">=3.8"
+Faker = ">=12.0.0"
 
 [tool.poetry.dev-dependencies]
-pytest = "^7.0.1"
-pytest-cov = "^3.0.0"
-black = "^22.1.0"
+pytest = ">=7.0.1"
+pytest-cov = ">=3.0.0"
+black = ">=22.1.0"
 
 [tool.pytest.ini_options]
 addopts = "-ra -v --ignore=.venv --cov=. --cov-report=html"
 python_files = "tests.py test_*.py"
-testpaths = [
-   "tests",
-]
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
